# algorithmic_pricing_llms

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  final_presentation.tex  main.tex  milestone2.tex  pyproject.toml  run_experiment.py  slides_milestone1.tex
data/: README.md
experiments_fuels/: 2_agents_estim_calv.py  all_agents.py  all_agents_but_bp.py  all_agents_but_bp_simple_demand.py  all_agents_estim_calv.py  all_fake.py  data_for_agents.ipynb  example.py  only_one_agent.py  only_one_agent_calvano.py  only_one_agent_simple_demand.py  run_experiment.py
experiments_synthetic/: README.md  duopoly.py  duopoly_asymmetric.py  duopoly_cost_shock.py  duopoly_results.ipynb  example.py  example_shock_1a.py  example_shock_1b.py  monopoly.py  monopoly_cost_shock.py  oligopoly_3.py  oligopoly_4.py  oligopoly_5.py  oligopoly_8.py  run_experiment.py
latex/: appendix.tex  commands.tex  packages.tex  references.bib
notebooks/: analysis.ipynb  calvano_estimation.ipynb  data_check.ipynb  demand_function_test.ipynb  plots.ipynb  presentation.ipynb  regression.ipynb  results_data_generation.ipynb  results_duopoly.ipynb  results_duopoly_FE.ipynb  results_duopoly_juli.ipynb  results_duopoly_plots.ipynb  results_monopoly.ipynb  results_oligopoly_3_FE.ipynb  results_oligopoly_4_FE.ipynb  results_oligopoly_5_FE.ipynb  results_plotting.ipynb  simple_demand_understanding.ipynb  stupid_file.ipynb  text_analysis_clusters.ipynb  text_analysis_competition.ipynb  welch_tests.ipynb
slides_pricing_collusion/: demo.bib  demo.tex
src/: README.md
(+76 files in other folders)
