[project]
name = "algorithmic-pricing-llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "ipython>=9.3.0",
    "lmstudio>=1.3.1",
    "matplotlib>=3.10.3",
    "mistralai>=1.8.2",
    "numpy>=2.3.0",
    "openai>=1.86.0",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "ruff>=0.11.13",
    "scipy>=1.15.3",
]
