[project]
name = "algorithmic-pricing-llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "instructor>=1.9.0",
    "ipykernel>=6.29.5",
    "ipython>=9.3.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "linearmodels>=6.1",
    "lmstudio>=1.3.1",
    "matplotlib>=3.10.3",
    "mistralai>=1.8.2",
    "numpy>=2.3.0",
    "openai>=1.86.0",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "polars>=1.30.0",
    "pre-commit>=4.2.0",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.7",
    "pydynpd>=0.2.1",
    "requests>=2.32.4",
    "ruff>=0.11.13",
    "scikit-learn>=1.7.0",
    "scipy==1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]
